--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Anupam's Resturant</title>
+    <title>Anupam's Restaurant</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <link
@@ -28,7 +28,7 @@
             </a>
 
             <div class="navbar-brand">
-              <a href="index.html"><h1>Anupam Sweets And Resturant</h1></a>
+              <a href="index.html"><h1>Anupam Sweets And Restaurant</h1></a>
               <p>
                 <img src="images/star-k-logo.png" alt="Kosher certification" />
                 <span
@@ -136,7 +136,7 @@
           </section>
         </div>
         <div class="text-center">
-          &copy; Copyright Anupam Sweets And Resturant 2022
+          &copy; Copyright Anupam Sweets And Restaurant 2022
         </div>
       </div>
     </footer>
