--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
 
     <div id="main-content" class="container"></div>
 
+    <div class="song">
+        <audio controls="controls">
+            <source src="songs.mp3" type="audio/mpeg">
+          </audio></div>
+
     <footer class="panel-footer">
       <div class="container">
         <div class="row">
@@ -140,7 +145,7 @@
         </div>
       </div>
     </footer>
-
+    
     <!-- jQuery (Bootstrap JS plugins depend on it) -->
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
